package baseWithStates.doorstates;

public class States {
    public static final String LOCKED = "locked";
    public static final String UNLOCKED = "unlocked";
}
